build hash lib, link renalog lib in main cmake project

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,13 @@
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/filesystem)
 # build filesystem subproject
 
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/renalog)
+# build renalog subproject
+
+add_library(hash SHARED
+    ${CMAKE_CURRENT_SOURCE_DIR}/hash.cpp
+)
+target_link_libraries(hash
+    OpenSSL::Crypto
+    OpenSSL::SSL
+)
