--- a/src/cvector/CMakeLists.txt
+++ b/src/cvector/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 project(cvector VERSION 1.0)
+# subproject under main: BitUP
 
 add_definitions(-DEXPORTING_APIS)
 
