link filesystem lib to bip

--- a/src/bitupignore/CMakeLists.txt
+++ b/src/bitupignore/CMakeLists.txt
@@ -9,3 +9,7 @@ set(BITUPIGNORE_PARSER_MAIN ${CMAKE_CURRENT_SOURCE_DIR}/bitupignore_parser.c)
 add_executable(bip
     ${BITUPIGNORE_PARSER_MAIN}
 )
+
+target_link_libraries(bip
+    filesystem
+)
